Fix panel covering address field & search field:
This bug was caused by the previous commit, which set the z-index of the panel. Now the entire Pillar stacks above the panel.

--- a/grid-items/_grid-layout.scss
+++ b/grid-items/_grid-layout.scss
@@ -45,6 +45,20 @@
       backdrop-filter: unset;
     }
 
+    // z-index fix below
+
+    #{variables.$select-address-bar} {
+      z-index: 4; // replicates the z-index value set by the browser, which causes this to stack above the panel
+    }
+
+    #{variables.$select-title-bar},
+    #main .mainbar::before,
+    #{variables.$select-bookmark-bar},
+    #{variables.$select-tab-bar},
+    #{variables.$select-footer-has-status-bar} {
+      z-index: 4; // makes the entire Pillar stack on top of the panel, and not just the address bar
+    }
+
     // Borders below
 
     #{variables.$select-address-bar},
